--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGODB_URI='mongodb+srv://rounaque7:Backend4999@cluster0.dlrfm.mongodb.net'
+MONGODB_URI='abc'
 JWT_SECRET='secret#text'
 NODE_ENV='development'
